i hate to write this message every time...

--- a/one_year_returns_and_risks.ipynb
+++ b/one_year_returns_and_risks.ipynb
@@ -8430,7 +8430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -8441,48 +8441,162 @@
        },
        "data": [
         {
-         "hovertemplate": "annualized Risk=%{x}<br>annualized Return=%{y}<br>index=%{text}<extra></extra>",
-         "legendgroup": "",
+         "hovertemplate": "index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>",
+         "legendgroup": "AAPL",
          "marker": {
           "color": "#1F77B4",
           "symbol": "circle"
          },
          "mode": "markers+text",
-         "name": "",
+         "name": "AAPL",
          "orientation": "v",
          "showlegend": false,
          "text": [
-          "AAPL",
-          "BTC-USD",
-          "FB",
-          "GOOG",
-          "MSFT",
+          "AAPL"
+         ],
+         "textposition": "bottom right",
+         "type": "scatter",
+         "x": [
+          0.2501977474309443
+         ],
+         "xaxis": "x",
+         "y": [
+          0.3490053574808312
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>",
+         "legendgroup": "BTC-USD",
+         "marker": {
+          "color": "#FF7F0E",
+          "symbol": "circle"
+         },
+         "mode": "markers+text",
+         "name": "BTC-USD",
+         "orientation": "v",
+         "showlegend": false,
+         "text": [
+          "BTC-USD"
+         ],
+         "textposition": "bottom right",
+         "type": "scatter",
+         "x": [
+          0.7627407834027113
+         ],
+         "xaxis": "x",
+         "y": [
+          0.6772718394994213
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>",
+         "legendgroup": "FB",
+         "marker": {
+          "color": "#2CA02C",
+          "symbol": "circle"
+         },
+         "mode": "markers+text",
+         "name": "FB",
+         "orientation": "v",
+         "showlegend": false,
+         "text": [
+          "FB"
+         ],
+         "textposition": "bottom right",
+         "type": "scatter",
+         "x": [
+          0.2957860177579677
+         ],
+         "xaxis": "x",
+         "y": [
+          0.26819168283444517
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>",
+         "legendgroup": "GOOG",
+         "marker": {
+          "color": "#D62728",
+          "symbol": "circle"
+         },
+         "mode": "markers+text",
+         "name": "GOOG",
+         "orientation": "v",
+         "showlegend": false,
+         "text": [
+          "GOOG"
+         ],
+         "textposition": "bottom right",
+         "type": "scatter",
+         "x": [
+          0.2370683591879212
+         ],
+         "xaxis": "x",
+         "y": [
+          0.5458008650254121
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>",
+         "legendgroup": "MSFT",
+         "marker": {
+          "color": "#9467BD",
+          "symbol": "circle"
+         },
+         "mode": "markers+text",
+         "name": "MSFT",
+         "orientation": "v",
+         "showlegend": false,
+         "text": [
+          "MSFT"
+         ],
+         "textposition": "bottom right",
+         "type": "scatter",
+         "x": [
+          0.20972158186130674
+         ],
+         "xaxis": "x",
+         "y": [
+          0.4589746748188732
+         ],
+         "yaxis": "y"
+        },
+        {
+         "hovertemplate": "index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>",
+         "legendgroup": "TSLA",
+         "marker": {
+          "color": "#8C564B",
+          "symbol": "circle"
+         },
+         "mode": "markers+text",
+         "name": "TSLA",
+         "orientation": "v",
+         "showlegend": false,
+         "text": [
           "TSLA"
          ],
          "textposition": "bottom right",
          "type": "scatter",
          "x": [
-          0.2501977474309443,
-          0.7627407834027113,
-          0.2957860177579677,
-          0.2370683591879212,
-          0.20972158186130674,
           0.5477292244882533
          ],
          "xaxis": "x",
          "y": [
-          0.3490053574808312,
-          0.6772718394994213,
-          0.26819168283444517,
-          0.5458008650254121,
-          0.4589746748188732,
           0.5193928333676966
          ],
          "yaxis": "y"
         }
        ],
        "layout": {
+        "height": 600,
         "legend": {
+         "title": {
+          "text": "index"
+         },
          "tracegroupgap": 0
         },
         "template": {
@@ -8601,6 +8715,7 @@
         "title": {
          "text": "Return and Risk"
         },
+        "width": 850,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -8624,9 +8739,9 @@
        }
       },
       "text/html": [
-       "<div>                            <div id=\"48f3574a-8c26-4207-9505-42f9641cde99\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>            <script type=\"text/javascript\">                require([\"plotly\"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById(\"48f3574a-8c26-4207-9505-42f9641cde99\")) {                    Plotly.newPlot(                        \"48f3574a-8c26-4207-9505-42f9641cde99\",                        [{\"hovertemplate\":\"annualized Risk=%{x}<br>annualized Return=%{y}<br>index=%{text}<extra></extra>\",\"legendgroup\":\"\",\"marker\":{\"color\":\"#1F77B4\",\"symbol\":\"circle\"},\"mode\":\"markers+text\",\"name\":\"\",\"orientation\":\"v\",\"showlegend\":false,\"text\":[\"AAPL\",\"BTC-USD\",\"FB\",\"GOOG\",\"MSFT\",\"TSLA\"],\"x\":[0.2501977474309443,0.7627407834027113,0.2957860177579677,0.2370683591879212,0.20972158186130674,0.5477292244882533],\"xaxis\":\"x\",\"y\":[0.3490053574808312,0.6772718394994213,0.26819168283444517,0.5458008650254121,0.4589746748188732,0.5193928333676966],\"yaxis\":\"y\",\"type\":\"scatter\",\"textposition\":\"bottom right\"}],                        {\"template\":{\"data\":{\"pie\":[{\"automargin\":true,\"type\":\"pie\"}],\"scatter\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatter\"}],\"scatter3d\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatter3d\"}],\"scattergeo\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scattergeo\"}],\"scattergl\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scattergl\"}],\"scatterpolar\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatterpolar\"}],\"scatterpolargl\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatterpolargl\"}],\"scatterternary\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatterternary\"}],\"table\":[{\"cells\":{\"height\":30},\"header\":{\"height\":36},\"type\":\"table\"}]},\"layout\":{\"font\":{\"size\":18},\"xaxis\":{\"title\":{\"standoff\":15}},\"yaxis\":{\"title\":{\"standoff\":15}}}},\"xaxis\":{\"anchor\":\"y\",\"domain\":[0.0,1.0],\"title\":{\"text\":\"annualized Risk\"}},\"yaxis\":{\"anchor\":\"x\",\"domain\":[0.0,1.0],\"title\":{\"text\":\"annualized Return\"}},\"legend\":{\"tracegroupgap\":0},\"title\":{\"text\":\"Return and Risk\"}},                        {\"responsive\": true}                    ).then(function(){\n",
+       "<div>                            <div id=\"820cf1ed-be51-4d30-8383-f6f4e1175be3\" class=\"plotly-graph-div\" style=\"height:600px; width:850px;\"></div>            <script type=\"text/javascript\">                require([\"plotly\"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById(\"820cf1ed-be51-4d30-8383-f6f4e1175be3\")) {                    Plotly.newPlot(                        \"820cf1ed-be51-4d30-8383-f6f4e1175be3\",                        [{\"hovertemplate\":\"index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>\",\"legendgroup\":\"AAPL\",\"marker\":{\"color\":\"#1F77B4\",\"symbol\":\"circle\"},\"mode\":\"markers+text\",\"name\":\"AAPL\",\"orientation\":\"v\",\"showlegend\":false,\"text\":[\"AAPL\"],\"x\":[0.2501977474309443],\"xaxis\":\"x\",\"y\":[0.3490053574808312],\"yaxis\":\"y\",\"type\":\"scatter\",\"textposition\":\"bottom right\"},{\"hovertemplate\":\"index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>\",\"legendgroup\":\"BTC-USD\",\"marker\":{\"color\":\"#FF7F0E\",\"symbol\":\"circle\"},\"mode\":\"markers+text\",\"name\":\"BTC-USD\",\"orientation\":\"v\",\"showlegend\":false,\"text\":[\"BTC-USD\"],\"x\":[0.7627407834027113],\"xaxis\":\"x\",\"y\":[0.6772718394994213],\"yaxis\":\"y\",\"type\":\"scatter\",\"textposition\":\"bottom right\"},{\"hovertemplate\":\"index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>\",\"legendgroup\":\"FB\",\"marker\":{\"color\":\"#2CA02C\",\"symbol\":\"circle\"},\"mode\":\"markers+text\",\"name\":\"FB\",\"orientation\":\"v\",\"showlegend\":false,\"text\":[\"FB\"],\"x\":[0.2957860177579677],\"xaxis\":\"x\",\"y\":[0.26819168283444517],\"yaxis\":\"y\",\"type\":\"scatter\",\"textposition\":\"bottom right\"},{\"hovertemplate\":\"index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>\",\"legendgroup\":\"GOOG\",\"marker\":{\"color\":\"#D62728\",\"symbol\":\"circle\"},\"mode\":\"markers+text\",\"name\":\"GOOG\",\"orientation\":\"v\",\"showlegend\":false,\"text\":[\"GOOG\"],\"x\":[0.2370683591879212],\"xaxis\":\"x\",\"y\":[0.5458008650254121],\"yaxis\":\"y\",\"type\":\"scatter\",\"textposition\":\"bottom right\"},{\"hovertemplate\":\"index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>\",\"legendgroup\":\"MSFT\",\"marker\":{\"color\":\"#9467BD\",\"symbol\":\"circle\"},\"mode\":\"markers+text\",\"name\":\"MSFT\",\"orientation\":\"v\",\"showlegend\":false,\"text\":[\"MSFT\"],\"x\":[0.20972158186130674],\"xaxis\":\"x\",\"y\":[0.4589746748188732],\"yaxis\":\"y\",\"type\":\"scatter\",\"textposition\":\"bottom right\"},{\"hovertemplate\":\"index=%{text}<br>annualized Risk=%{x}<br>annualized Return=%{y}<extra></extra>\",\"legendgroup\":\"TSLA\",\"marker\":{\"color\":\"#8C564B\",\"symbol\":\"circle\"},\"mode\":\"markers+text\",\"name\":\"TSLA\",\"orientation\":\"v\",\"showlegend\":false,\"text\":[\"TSLA\"],\"x\":[0.5477292244882533],\"xaxis\":\"x\",\"y\":[0.5193928333676966],\"yaxis\":\"y\",\"type\":\"scatter\",\"textposition\":\"bottom right\"}],                        {\"template\":{\"data\":{\"pie\":[{\"automargin\":true,\"type\":\"pie\"}],\"scatter\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatter\"}],\"scatter3d\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatter3d\"}],\"scattergeo\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scattergeo\"}],\"scattergl\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scattergl\"}],\"scatterpolar\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatterpolar\"}],\"scatterpolargl\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatterpolargl\"}],\"scatterternary\":[{\"line\":{\"width\":3},\"marker\":{\"size\":9},\"type\":\"scatterternary\"}],\"table\":[{\"cells\":{\"height\":30},\"header\":{\"height\":36},\"type\":\"table\"}]},\"layout\":{\"font\":{\"size\":18},\"xaxis\":{\"title\":{\"standoff\":15}},\"yaxis\":{\"title\":{\"standoff\":15}}}},\"xaxis\":{\"anchor\":\"y\",\"domain\":[0.0,1.0],\"title\":{\"text\":\"annualized Risk\"}},\"yaxis\":{\"anchor\":\"x\",\"domain\":[0.0,1.0],\"title\":{\"text\":\"annualized Return\"}},\"legend\":{\"title\":{\"text\":\"index\"},\"tracegroupgap\":0},\"title\":{\"text\":\"Return and Risk\"},\"height\":600,\"width\":850},                        {\"responsive\": true}                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('48f3574a-8c26-4207-9505-42f9641cde99');\n",
+       "var gd = document.getElementById('820cf1ed-be51-4d30-8383-f6f4e1175be3');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
