--- a/some_plot_tests.ipynb
+++ b/some_plot_tests.ipynb
@@ -75,24 +75,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-04-05</th>\n",
-       "      <td>178.300003</td>\n",
-       "      <td>174.419998</td>\n",
-       "      <td>177.500000</td>\n",
-       "      <td>175.059998</td>\n",
-       "      <td>73401800.0</td>\n",
-       "      <td>175.059998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-06</th>\n",
-       "      <td>173.630005</td>\n",
-       "      <td>170.130005</td>\n",
-       "      <td>172.360001</td>\n",
-       "      <td>171.830002</td>\n",
-       "      <td>89058800.0</td>\n",
-       "      <td>171.830002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022-04-07</th>\n",
        "      <td>173.360001</td>\n",
        "      <td>169.850006</td>\n",
@@ -116,8 +98,26 @@
        "      <td>165.500000</td>\n",
        "      <td>168.710007</td>\n",
        "      <td>165.750000</td>\n",
-       "      <td>72088900.0</td>\n",
+       "      <td>72246700.0</td>\n",
        "      <td>165.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-12</th>\n",
+       "      <td>169.869995</td>\n",
+       "      <td>166.639999</td>\n",
+       "      <td>168.020004</td>\n",
+       "      <td>167.660004</td>\n",
+       "      <td>79265200.0</td>\n",
+       "      <td>167.660004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-13</th>\n",
+       "      <td>171.039993</td>\n",
+       "      <td>166.770004</td>\n",
+       "      <td>167.389999</td>\n",
+       "      <td>170.399994</td>\n",
+       "      <td>70551700.0</td>\n",
+       "      <td>170.399994</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -126,19 +126,19 @@
       "text/plain": [
        "                  High         Low        Open       Close      Volume  \\\n",
        "Date                                                                     \n",
-       "2022-04-05  178.300003  174.419998  177.500000  175.059998  73401800.0   \n",
-       "2022-04-06  173.630005  170.130005  172.360001  171.830002  89058800.0   \n",
        "2022-04-07  173.360001  169.850006  171.160004  172.139999  77594700.0   \n",
        "2022-04-08  171.779999  169.199997  171.779999  170.089996  76515900.0   \n",
-       "2022-04-11  169.029999  165.500000  168.710007  165.750000  72088900.0   \n",
+       "2022-04-11  169.029999  165.500000  168.710007  165.750000  72246700.0   \n",
+       "2022-04-12  169.869995  166.639999  168.020004  167.660004  79265200.0   \n",
+       "2022-04-13  171.039993  166.770004  167.389999  170.399994  70551700.0   \n",
        "\n",
        "             Adj Close  \n",
        "Date                    \n",
-       "2022-04-05  175.059998  \n",
-       "2022-04-06  171.830002  \n",
        "2022-04-07  172.139999  \n",
        "2022-04-08  170.089996  \n",
-       "2022-04-11  165.750000  "
+       "2022-04-11  165.750000  \n",
+       "2022-04-12  167.660004  \n",
+       "2022-04-13  170.399994  "
       ]
      },
      "execution_count": 3,
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -428,6 +428,7 @@
         "margin": {
          "t": 60
         },
+        "showlegend": false,
         "template": {
          "data": {
           "pie": [
@@ -583,7 +584,7 @@
    ],
    "source": [
     "fig = px.bar(vol_chart, x= 'signal', y = 'volatility', color='signal', labels={'signal':'Signal', 'volatility':'Volatility'}, width=1000)\n",
-    "fig.update_layout(height=600, width=800, title_text=\"Overall Volatility\")\n",
+    "fig.update_layout(height=600, width=800, title_text=\"Overall Volatility\", showlegend = False)\n",
     "fig.show()"
    ]
   },
