Updated for the presentation.

--- a/testing_OBVBacktester.ipynb
+++ b/testing_OBVBacktester.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "OBVBacktester(symbol = BTC-USD, OBV_EMA = 20,  start = 2015-01-01, end = 2018-12-31)"
+       "OBVBacktester(symbol = BTC-USD, EMA = 20,  start = 2015-01-01, end = 2018-12-31)"
       ]
      },
      "execution_count": 3,
@@ -79,7 +79,7 @@
        "      <th>Volume</th>\n",
        "      <th>returns</th>\n",
        "      <th>OBV</th>\n",
-       "      <th>OBV_EMA</th>\n",
+       "      <th>EMA</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -185,7 +185,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Close        Volume   returns           OBV       OBV_EMA\n",
+       "                  Close        Volume   returns           OBV           EMA\n",
        "Date                                                                       \n",
        "2015-01-02   286.769674  3.218138e+07       NaN  0.000000e+00  0.000000e+00\n",
        "2015-01-05   274.473999  4.396280e+07 -0.043823 -4.396280e+07 -2.308047e+07\n",
@@ -261,7 +261,7 @@
        "      <th>Volume</th>\n",
        "      <th>returns</th>\n",
        "      <th>OBV</th>\n",
-       "      <th>OBV_EMA</th>\n",
+       "      <th>EMA</th>\n",
        "      <th>position</th>\n",
        "      <th>strategy</th>\n",
        "      <th>creturns</th>\n",
@@ -419,7 +419,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Close        Volume   returns           OBV       OBV_EMA  \\\n",
+       "                  Close        Volume   returns           OBV           EMA  \\\n",
        "Date                                                                          \n",
        "2015-01-06   286.188995  2.324570e+07  0.041796 -2.071710e+07 -2.221265e+07   \n",
        "2015-01-07   294.337006  2.486680e+07  0.028073  4.149700e+06 -1.460225e+07   \n",
@@ -2490,7 +2490,7 @@
          "yaxis": "y"
         },
         {
-         "name": "OBV_EMA",
+         "name": "EMA",
          "type": "scatter",
          "x": [
           "2015-01-06T00:00:00",
@@ -6642,7 +6642,7 @@
          }
         },
         "title": {
-         "text": "BTC-USD OBV Buy and Sell Signals with OBV_EMA = 20"
+         "text": "BTC-USD OBV Buy and Sell Signals with EMA = 20"
         },
         "width": 1400,
         "xaxis": {
@@ -10891,7 +10891,7 @@
          }
         },
         "title": {
-         "text": "BTC-USD Buy and Hold versus Trading strategy OBV with OBV_EMA = 20"
+         "text": "BTC-USD Buy and Hold versus Trading strategy OBV with EMA = 20"
         },
         "width": 1400,
         "yaxis": {
@@ -10927,7 +10927,7 @@
     }
    ],
    "source": [
-    "tester.optimize_parameters(OBV_EMA_range=(slice(10, 100, 1)))"
+    "tester.optimize_parameters((slice(10, 100, 1)))"
    ]
   },
   {
@@ -10989,7 +10989,7 @@
        "      <th>Volume</th>\n",
        "      <th>returns</th>\n",
        "      <th>OBV</th>\n",
-       "      <th>OBV_EMA</th>\n",
+       "      <th>EMA</th>\n",
        "      <th>position</th>\n",
        "      <th>strategy</th>\n",
        "      <th>creturns</th>\n",
@@ -11147,7 +11147,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Close        Volume   returns           OBV       OBV_EMA  \\\n",
+       "                  Close        Volume   returns           OBV           EMA  \\\n",
        "Date                                                                          \n",
        "2015-01-06   286.188995  2.324570e+07  0.041796 -2.071710e+07 -2.173239e+07   \n",
        "2015-01-07   294.337006  2.486680e+07  0.028073  4.149700e+06 -1.501411e+07   \n",
@@ -13218,7 +13218,7 @@
          "yaxis": "y"
         },
         {
-         "name": "OBV_EMA",
+         "name": "EMA",
          "type": "scatter",
          "x": [
           "2015-01-06T00:00:00",
@@ -17370,7 +17370,7 @@
          }
         },
         "title": {
-         "text": "BTC-USD OBV Buy and Sell Signals with OBV_EMA = 79"
+         "text": "BTC-USD OBV Buy and Sell Signals with EMA = 79"
         },
         "width": 1400,
         "xaxis": {
@@ -21619,7 +21619,7 @@
          }
         },
         "title": {
-         "text": "BTC-USD Buy and Hold versus Trading strategy OBV with OBV_EMA = 79"
+         "text": "BTC-USD Buy and Hold versus Trading strategy OBV with EMA = 79"
         },
         "width": 1400,
         "yaxis": {
@@ -21642,7 +21642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Forward testing with optimized OBV_EMA"
+    "#### Forward testing with optimized EMA"
    ]
   },
   {
@@ -21662,7 +21662,7 @@
     {
      "data": {
       "text/plain": [
-       "(30.248514, 19.755396)"
+       "(30.005183, 19.596475)"
       ]
      },
      "execution_count": 16,
@@ -21704,7 +21704,7 @@
        "      <th>Volume</th>\n",
        "      <th>returns</th>\n",
        "      <th>OBV</th>\n",
-       "      <th>OBV_EMA</th>\n",
+       "      <th>EMA</th>\n",
        "      <th>position</th>\n",
        "      <th>strategy</th>\n",
        "      <th>creturns</th>\n",
@@ -21797,30 +21797,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-04-06</th>\n",
-       "      <td>43206.738281</td>\n",
-       "      <td>3.939340e+10</td>\n",
-       "      <td>-0.052946</td>\n",
-       "      <td>1.778145e+12</td>\n",
-       "      <td>1.738386e+12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.052946</td>\n",
-       "      <td>11.261312</td>\n",
-       "      <td>32.462986</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-07</th>\n",
-       "      <td>43503.847656</td>\n",
-       "      <td>2.610197e+10</td>\n",
-       "      <td>0.006853</td>\n",
-       "      <td>1.804247e+12</td>\n",
-       "      <td>1.740033e+12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.006853</td>\n",
-       "      <td>11.338750</td>\n",
-       "      <td>32.686216</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022-04-08</th>\n",
        "      <td>42425.824219</td>\n",
        "      <td>2.030708e+10</td>\n",
@@ -21846,23 +21822,47 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-04-12</th>\n",
-       "      <td>40259.378906</td>\n",
-       "      <td>3.873189e+10</td>\n",
-       "      <td>0.018488</td>\n",
-       "      <td>1.788722e+12</td>\n",
-       "      <td>1.742536e+12</td>\n",
+       "      <td>40127.183594</td>\n",
+       "      <td>3.099150e+10</td>\n",
+       "      <td>0.015199</td>\n",
+       "      <td>1.780981e+12</td>\n",
+       "      <td>1.742343e+12</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.018488</td>\n",
-       "      <td>10.493118</td>\n",
-       "      <td>30.248514</td>\n",
+       "      <td>0.015199</td>\n",
+       "      <td>10.458663</td>\n",
+       "      <td>30.149191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-13</th>\n",
+       "      <td>41166.730469</td>\n",
+       "      <td>2.769111e+10</td>\n",
+       "      <td>0.025576</td>\n",
+       "      <td>1.808672e+12</td>\n",
+       "      <td>1.744001e+12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.025576</td>\n",
+       "      <td>10.729608</td>\n",
+       "      <td>30.930245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-14</th>\n",
+       "      <td>39935.515625</td>\n",
+       "      <td>2.434200e+10</td>\n",
+       "      <td>-0.030364</td>\n",
+       "      <td>1.784330e+12</td>\n",
+       "      <td>1.745009e+12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.030364</td>\n",
+       "      <td>10.408707</td>\n",
+       "      <td>30.005183</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>825 rows × 9 columns</p>\n",
+       "<p>827 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Close        Volume   returns           OBV       OBV_EMA  \\\n",
+       "                   Close        Volume   returns           OBV           EMA  \\\n",
        "Date                                                                           \n",
        "2019-01-04   3926.514893  5.194201e+09  0.023129  6.639857e+08 -1.282794e+09   \n",
        "2019-01-07   4025.248291  5.228626e+09  0.024834  5.892611e+09  5.797458e+08   \n",
@@ -21870,11 +21870,11 @@
        "2019-01-09   4035.296387  5.115905e+09  0.001103  1.631511e+10  5.207756e+09   \n",
        "2019-01-10   3678.924561  6.874144e+09 -0.092459  9.440966e+09  5.859387e+09   \n",
        "...                  ...           ...       ...           ...           ...   \n",
-       "2022-04-06  43206.738281  3.939340e+10 -0.052946  1.778145e+12  1.738386e+12   \n",
-       "2022-04-07  43503.847656  2.610197e+10  0.006853  1.804247e+12  1.740033e+12   \n",
        "2022-04-08  42425.824219  2.030708e+10 -0.025092  1.783940e+12  1.741130e+12   \n",
        "2022-04-11  39521.902344  3.394991e+10 -0.070902  1.749990e+12  1.741352e+12   \n",
-       "2022-04-12  40259.378906  3.873189e+10  0.018488  1.788722e+12  1.742536e+12   \n",
+       "2022-04-12  40127.183594  3.099150e+10  0.015199  1.780981e+12  1.742343e+12   \n",
+       "2022-04-13  41166.730469  2.769111e+10  0.025576  1.808672e+12  1.744001e+12   \n",
+       "2022-04-14  39935.515625  2.434200e+10 -0.030364  1.784330e+12  1.745009e+12   \n",
        "\n",
        "            position  strategy   creturns  cstrategy  \n",
        "Date                                                  \n",
@@ -21884,13 +21884,13 @@
        "2019-01-09         1  0.001103   1.051751   1.004207  \n",
        "2019-01-10         1 -0.092459   0.958867   0.915522  \n",
        "...              ...       ...        ...        ...  \n",
-       "2022-04-06         1 -0.052946  11.261312  32.462986  \n",
-       "2022-04-07         1  0.006853  11.338750  32.686216  \n",
        "2022-04-08         1 -0.025092  11.057776  31.876253  \n",
        "2022-04-11         1 -0.070902  10.300904  29.694418  \n",
-       "2022-04-12         1  0.018488  10.493118  30.248514  \n",
+       "2022-04-12         1  0.015199  10.458663  30.149191  \n",
+       "2022-04-13         1  0.025576  10.729608  30.930245  \n",
+       "2022-04-14         1 -0.030364  10.408707  30.005183  \n",
        "\n",
-       "[825 rows x 9 columns]"
+       "[827 rows x 9 columns]"
       ]
      },
      "execution_count": 17,
@@ -22742,7 +22742,9 @@
           "2022-04-07T00:00:00",
           "2022-04-08T00:00:00",
           "2022-04-11T00:00:00",
-          "2022-04-12T00:00:00"
+          "2022-04-12T00:00:00",
+          "2022-04-13T00:00:00",
+          "2022-04-14T00:00:00"
          ],
          "xaxis": "x",
          "y": [
@@ -23570,12 +23572,14 @@
           1804246853457.6672,
           1783939772300.334,
           1749989860134.334,
-          1788721750822.334
+          1780981360988.334,
+          1808672466216.334,
+          1784330464243.334
          ],
          "yaxis": "y"
         },
         {
-         "name": "OBV_EMA",
+         "name": "EMA",
          "type": "scatter",
          "x": [
           "2019-01-04T00:00:00",
@@ -24402,7 +24406,9 @@
           "2022-04-07T00:00:00",
           "2022-04-08T00:00:00",
           "2022-04-11T00:00:00",
-          "2022-04-12T00:00:00"
+          "2022-04-12T00:00:00",
+          "2022-04-13T00:00:00",
+          "2022-04-14T00:00:00"
          ],
          "xaxis": "x",
          "y": [
@@ -25230,7 +25236,9 @@
           1740032699948.0276,
           1741130376757.7668,
           1741351863842.3643,
-          1742536111017.819
+          1742342601271.813,
+          1744000847896.7307,
+          1745009088306.1692
          ],
          "yaxis": "y"
         },
@@ -26062,7 +26070,9 @@
           "2022-04-07T00:00:00",
           "2022-04-08T00:00:00",
           "2022-04-11T00:00:00",
-          "2022-04-12T00:00:00"
+          "2022-04-12T00:00:00",
+          "2022-04-13T00:00:00",
+          "2022-04-14T00:00:00"
          ],
          "xaxis": "x",
          "y": [
@@ -26890,6 +26900,8 @@
           1,
           1,
           1,
+          1,
+          1,
           1
          ],
          "yaxis": "y2"
@@ -27011,7 +27023,7 @@
          }
         },
         "title": {
-         "text": "BTC-USD OBV Buy and Sell Signals with OBV_EMA = 79"
+         "text": "BTC-USD OBV Buy and Sell Signals with EMA = 79"
         },
         "width": 1400,
         "xaxis": {
@@ -27893,7 +27905,9 @@
           "2022-04-07T00:00:00",
           "2022-04-08T00:00:00",
           "2022-04-11T00:00:00",
-          "2022-04-12T00:00:00"
+          "2022-04-12T00:00:00",
+          "2022-04-13T00:00:00",
+          "2022-04-14T00:00:00"
          ],
          "y": [
           1.0233984198320973,
@@ -28720,7 +28734,9 @@
           11.338749544074616,
           11.057775827518794,
           10.300903858483798,
-          10.493118167960196
+          10.458663065248775,
+          10.729608333080899,
+          10.40870713697204
          ]
         },
         {
@@ -29551,7 +29567,9 @@
           "2022-04-07T00:00:00",
           "2022-04-08T00:00:00",
           "2022-04-11T00:00:00",
-          "2022-04-12T00:00:00"
+          "2022-04-12T00:00:00",
+          "2022-04-13T00:00:00",
+          "2022-04-14T00:00:00"
          ],
          "y": [
           0.9771365487979391,
@@ -30378,7 +30396,9 @@
           32.68621609567041,
           31.876253093943596,
           29.694418082907333,
-          30.248514320045658
+          30.149190586996756,
+          30.930244577124625,
+          30.005182620283488
          ]
         },
         {
@@ -30389,7 +30409,7 @@
          "mode": "markers+text",
          "showlegend": false,
          "text": [
-          "10.493118167960196"
+          "10.40870713697204"
          ],
          "textfont": {
           "color": "green",
@@ -30398,10 +30418,10 @@
          "textposition": "top right",
          "type": "scatter",
          "x": [
-          "2022-04-12T00:00:00"
+          "2022-04-14T00:00:00"
          ],
          "y": [
-          10.493118167960196
+          10.40870713697204
          ]
         },
         {
@@ -30412,7 +30432,7 @@
          "mode": "markers+text",
          "showlegend": false,
          "text": [
-          "30.248514320045658"
+          "30.005182620283488"
          ],
          "textfont": {
           "color": "green",
@@ -30421,10 +30441,10 @@
          "textposition": "top right",
          "type": "scatter",
          "x": [
-          "2022-04-12T00:00:00"
+          "2022-04-14T00:00:00"
          ],
          "y": [
-          30.248514320045658
+          30.005182620283488
          ]
         }
        ],
@@ -30544,7 +30564,7 @@
          }
         },
         "title": {
-         "text": "BTC-USD Buy and Hold versus Trading strategy OBV with OBV_EMA = 79"
+         "text": "BTC-USD Buy and Hold versus Trading strategy OBV with EMA = 79"
         },
         "width": 1400,
         "yaxis": {
